fix collapsed style to have 10px margins as well
git-svn-id: https://svn.muze.nl/svn/ariadne-php5/trunk@4704 7882d7ee-46e0-0310-a255-a28a61b628e4

--- a/www/styles/explore.css
+++ b/www/styles/explore.css
@@ -371,6 +371,8 @@ TH,TD,LI,P,BODY,DIV {
 	height: 1px;
 	overflow: hidden;
 	visibility: hidden;
+	padding-bottom: 0px;
+	padding-top: 0px;
 }
 
 .section.expanded .sectionbody {
